# study-compiler-prj

./: CMakeLists.txt  README.md  main.c
include/: emitter.h  error.h  global.h  init.h  lexer.h  parser.h  symbol.h
src/: emitter.c  error.c  init.c  lexer.c  parser.c  symbol.c
